# BeautyDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/neu/beautydemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/neu/beautydemo/activity/: Forget2Activity.java  ForgetActivity.java  LoginActivity.java  LoginCameraActivity.java  MainActivity.java  OpenCameraActivity.java  Register2Activity.java  RegisterActivity.java  SplashActivity.java  WelcomeGuideActivity.java
app/src/main/java/com/neu/beautydemo/adapter/: ClassesExpandableListViewAdapter.java  CustomExpandableListView.java  (+2 more)
app/src/main/res/anim/: push_left_out.xml
app/src/main/res/drawable/: btn_select.xml  guide_dot_selector.xml
app/src/main/res/layout/: activity_forget.xml  activity_login.xml  activity_main.xml  activity_main1.xml  activity_register.xml  activity_register2.xml  activity_test.xml  camera_surface_view.xml  content_toolbar.xml  fragment_animation.xml  fragment_default.xml  fragment_eye_brow.xml  fragment_glasses.xml  fragment_guide.xml  fragment_pimple.xml  fragment_rect.xml  fragment_scan.xml  fragment_skin.xml  fragment_wrinkle.xml  guid_view4.xml  guide_activity_guide.xml  guide_activity_splash.xml  layout_float_window.xml
app/src/main/res/raw/: wrinkle_expression.xml  wrinkle_fishtail.xml  wrinkle_forehead.xml  wrinkle_pouch.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/neu/beautydemo/: ExampleUnitTest.java
mylibrary/: CMakeLists.txt  build.gradle  proguard-rules.pro
mylibrary/src/main/cpp/: DetectionBasedTracker_jni.cpp  native-eyebrow.cpp  native-faceRec.cpp  native-gestures.cpp  native-glasses.cpp  native-pimple.cpp  native-skin.cpp  native-wrinkle.cpp
mylibrary/src/main/java/com/example/mylibrary/: BeautyLoader.java  FaceCallBack.java  GestureCallBack.java
openCVLibrary320/: build.gradle
(+34 files in other folders)
